# notspot_sim_cpp

imrt_virtual_joy/: README.md  package.xml  setup.cfg  setup.py
imrt_virtual_joy/imrt_virtual_joy/: gamepad.py  imrt_teleop_node.py  joystick.py  resources.py
imrt_virtual_joy/launch/: imrt_virtual_joy.launch.py
notspot_bringup/: CMakeLists.txt  package.xml
notspot_bringup/config/: ros2_control.yaml
notspot_bringup/launch/: run_robot_gazebo.launch.py
notspot_controller/: CMakeLists.txt  package.xml
notspot_controller/include/notspot_controller/: CrawlGaitController.hpp  GaitController.hpp  InverseKinematics.hpp  PIDController.hpp  RestController.hpp  RobotController.hpp  StandController.hpp  StateCommand.hpp  Transformations.hpp  TrotGaitController.hpp
notspot_controller/src/: main.cpp
notspot_controller/src/InverseKinematics/: InverseKinematics.cpp
notspot_controller/src/RobotController/: CrawlGaitController.cpp  GaitController.cpp  PIDController.cpp  RestController.cpp  RobotController.cpp  StandController.cpp  TrotGaitController.cpp
notspot_controller/src/RoboticsUtilities/: Transformations.cpp
notspot_description/: CMakeLists.txt  package.xml
notspot_description/urdf/: notspot.urdf.xacro
notspot_gazebo/: CMakeLists.txt  package.xml
notspot_gazebo/world/: normal.world
