<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>notspot_description</name>
  <version>1.0.0</version>
  <description>The notspot_description package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>